--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,7 @@ INSTALL(
 	PATTERN *.txt EXCLUDE
 )
 
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib CACHE PATH "")
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "")
+
 SUBDIRS(codetips)
