Fixes for OS X.

--- a/codetips/CMakeLists.txt
+++ b/codetips/CMakeLists.txt
@@ -28,7 +28,13 @@ ADD_LIBRARY(codetipsclient
 	InterpositionClient.cpp
 )
 
+ADD_LIBRARY(interposer
+	interposer.c
+)
+
 SET_TARGET_PROPERTIES(codetips PROPERTIES VERSION 0.0.1 SOVERSION 0)
 SET_TARGET_PROPERTIES(codetipsclient PROPERTIES VERSION 0.0.1 SOVERSION 0)
 
+
 INSTALL(TARGETS codetips ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
+INSTALL(TARGETS codetipsclient ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
